<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/comeBackBtn"
        style="@style/AppTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/stroke_border"
        android:fontFamily="@font/rambla"
        android:text="@string/cancel"
        android:textColor="@color/second_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/signOutBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImageProfile"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@mipmap/poster"
        app:civ_border_color="@color/black"
        app:civ_border_width="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameTWProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:text="@string/fish_name"
        android:textColor="@color/second_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/profileImageProfile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameTWProfile2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/name"
        android:textColor="@color/second_color"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoProfile" />

    <TextView
        android:id="@+id/emailTWProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/email"
        android:textColor="@color/second_color"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTWProfile2" />

    <TextView
        android:id="@+id/passwordTWProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/password"
        android:textColor="@color/second_color"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTWProfile" />

    <ImageView
        android:id="@+id/logoProfile"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/icon" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/userNameInputProfile"
        style="@style/AppTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/stroke_border"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text=""
        android:textColor="@color/white"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nameTWProfile2"
        app:layout_constraintTop_toBottomOf="@+id/profileImageProfile" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/userPasswordInputProfile"
        style="@style/AppTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/stroke_border"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text=""
        android:textColor="@color/white"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/passwordTWProfile"
        app:layout_constraintTop_toBottomOf="@+id/userEmailInputProfile" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/userEmailInputProfile"
        style="@style/AppTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/stroke_border"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text=""
        android:textColor="@color/white"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/emailTWProfile"
        app:layout_constraintTop_toBottomOf="@+id/userNameInputProfile" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveProfileBtn"
        style="@style/AppTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/filled_body"
        android:fontFamily="@font/rambla"
        android:text="@string/save"
        android:textColor="@color/main_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPasswordInputProfile" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signOutBtn"
        style="@style/AppTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/filled_body"
        android:fontFamily="@font/rambla"
        android:text="@string/sign_out"
        android:textColor="@color/main_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/deleteProfileBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/deleteProfileBtn"
        style="@style/AppTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/red_button"
        android:fontFamily="@font/rambla"
        android:text="@string/delete_profile"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>