<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/deleteNoteBtn"
        style="@style/AppTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/red_button"
        android:fontFamily="@font/rambla"
        android:text="@string/delete_note"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/saveBtnNN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addNoteBtnNN"
        style="@style/AppTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/filled_body"
        android:fontFamily="@font/rambla"
        android:text="@string/add_note"
        android:textColor="@color/main_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelBtnNN"
        style="@style/AppTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/stroke_border"
        android:fontFamily="@font/rambla"
        android:text="@string/cancel"
        android:textColor="@color/second_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/addNoteBtnNN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/saveBtnNN" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveBtnNN"
        style="@style/AppTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/stroke_border"
        android:fontFamily="@font/rambla"
        android:text="@string/save"
        android:textColor="@color/second_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/addNoteBtnNN"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImageNN"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@mipmap/poster"
        app:civ_border_color="@color/black"
        app:civ_border_width="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameTWNN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:text="@string/fish_name"
        android:textColor="@color/second_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/profileImageNN"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoNN"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/icon" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/deleteNoteBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoNN">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/isPublicCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/is_public"
                android:textColor="@color/second_color" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/textNN"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/filled_body"
                android:ems="10"
                android:gravity="start"
                android:inputType="textMultiLine|text"
                android:minHeight="300dp"
                android:padding="16dp"
                android:textAlignment="viewStart"
                android:textColor="@color/main_color" />
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.500684" />


</androidx.constraintlayout.widget.ConstraintLayout>